--- a/index.html
+++ b/index.html
@@ -2,11 +2,112 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width>, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Zadanie domowe GOIT Polska - Figma</title>
   </head>
   <body>
-    <h1>Nagłówek</h1>
+
+    <header>
+        <a href="https://www.webstudio.com">WebStudio</a>
+        <nav>
+          <ul>
+            <li><a href="agencja">Agencja</a></li>
+        <li><a href="portfolio">Portfolio</a></li>
+        <li><a href="kontakt">Kontakt</a></li>
+          </ul>
+        </nav>
+        <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+048111111111"> +048 111 111 111</a></li>
+        </ul>
+        <div><span>&#9757;</span><span>&#9757;</span></div>
+    </header>
+
+    <main>
+      <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+      <button type="button">Zamów usługę</button>
+    
+      <ul>
+        <li><strong>LOREM IPSUM</strong>
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales
+      dui. Interdum et malesuada
+      </p> </li>
+     <li> <strong>LOREM IPSUM</strong>
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales
+      dui. Interdum et malesuada
+      </p> </li>
+      <li><strong>LOREM IPSUM</strong>
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales
+      dui. Interdum et malesuada
+      </p> </li>
+      <li><strong>LOREM IPSUM</strong>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales
+      dui. Interdum et malesuada</p>
+     </li>
+      </ul>   
+      
+      <section>
+      <h2>Czym się zajmujemy</h2>
+      <ul>
+     <li><img src="images/first.jpg" alt="Człowiek pracujący na tablecie" width="370" height="294" /></li>
+     <li><img src="images/second.jpg" alt="telefon komórkowy i komputer" width="370" height="294" /></li>
+      <li><img src="images/third.jpg" alt="Baza kolorów na tablecie" width="370" height="294" /></li>
+      </ul>
+      </section>
+
+      <section>
+      <h2>Nasz zespół</h2>
+      <ul>
+      <li><figure>
+        <img
+          src="images/product.jpg"
+          alt="Osoba będąca product designerem w firmie"
+          width="270"
+          height="260"
+        />
+        <figcaption><strong>John Doe</strong><br/> Product Designer</figcaption>
+      </figure>
+      </li>
+        <li>
+<figure>
+      <img
+        src="images/frontend.jpg"
+        alt="Osoba będąca frontend developerem w firmie"
+        width="270"
+        height="260"
+      />
+      <figcaption><strong>John Doe</strong><br/>Frontend Developer</figcaption>
+</figure>
+        </li>
+        <li>
+<figure>
+      <img
+        src="images/marketing.jpg"
+        alt="Osoba będąca marketingowcem w firmie"
+        width="270"
+        height="260"
+      />
+      <figcaption><strong>John Doe</strong><br/>Marketing</figcaption>
+    </figure>
+  </li>
+  <li>
+    <figure>
+      <img src="images/ul.jpg" alt="Osoba będąca Ul Designer w firmie" width="270" height="260" />
+      <figcaption><strong>John Doe</strong><br/>Ul Designer</figcaption>
+    </figure>
+  </li>
+      </ul>
+    </section>
+    </main>
+    <footer>
+      <a href="https://www.webstudio.com">WebStudio</a>
+      <address>
+        m. Warszawa, Aleje Jerozolimskie 21<br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+048111111111">+048 111 111 111</a>
+      </address>
+    </footer>
   </body>
 </html>
