--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <a href="https://www.webstudio.com">WebStudio</a>
       <address>
         m. Warszawa, Aleje Jerozolimskie 21<br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br/>
         <a href="tel:+048111111111">+048 111 111 111</a>
       </address>
     </footer>
