--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
       <button type="button">Zamów usługę</button>
-    
+    <section>
       <ul>
         <li><strong>LOREM IPSUM</strong>
       <p>
@@ -47,7 +47,7 @@
       dui. Interdum et malesuada</p>
      </li>
       </ul>   
-      
+    </section>
       <section>
       <h2>Czym się zajmujemy</h2>
       <ul>
